--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
     padding: 22px 12px;
     background-color: black;
     font-size: 32px;
-    border-radius: 6px;
+    /* border-radius: 6px; */
 }
 
 .btns {
@@ -48,7 +48,7 @@ button {
     width: 85px;
     height: 65px;
     margin: auto;
-    border-radius: 6px;
+    /* border-radius: 6px; */
     background-color: #000000;
 }
 
