--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 body {
@@ -26,13 +26,13 @@ header {
     width: 340px;
 }
 
-.display {
+.current-display {
     width: 340px;
     text-align: right;
     padding: 22px 12px;
     background-color: black;
     font-size: 32px;
-    /* border-radius: 6px; */
+    border-radius: 6px;
 }
 
 .btns {
@@ -48,12 +48,11 @@ button {
     width: 85px;
     height: 65px;
     margin: auto;
-    /* border-radius: 6px; */
+    border-radius: 6px;
     background-color: #000000;
 }
 
 .all-clear {
-    width: 170px;
     background-color: #a52a2a;
 }
 
